--- a/lonarui/src/assets/css/header_z.css
+++ b/lonarui/src/assets/css/header_z.css
@@ -174,7 +174,7 @@ header .h-bot .logo + div{
     background: #fff;
     border-top: none;
     left: -1px;
-    top: 0px;
+    top: 16px;
     z-index: 999999999;
     text-align: center;
     position: relative!important;min-width: 80px;
@@ -187,6 +187,10 @@ header .h-bot .logo + div ul {
  border-top:none;
  top:28px;
  display: none;
+ transition: all .4s;
+}
+header .h-bot .logo + div:hover ul {
+	display: block;
 }
 header .h-bot .search {
   width: 450px;
@@ -208,7 +212,7 @@ header .h-bot .search label input[type="button"] {
   outline: none;
   border: none;
   cursor: pointer;
-  /* background: #e92930 url('../image/header-search.png') center center no-repeat; */
+  background: #e92930 url('.././image/header-search.png') center center no-repeat;
 }
 header .h-bot .search label input[type="button"]:hover {
   background-size: 22px 18px;
@@ -251,7 +255,7 @@ header .serach-list span .line {
   margin-right:8px;
 }
 header .h-bot .search label input[type="text"] {
-  margin-left: 69px;
+  margin-left: 76px;
 }
 header .h-bot .search label ul {
   text-align: center;
@@ -384,7 +388,7 @@ margin-top:30px;
   height: 18px;
   display: block;
   content: "";
-  /* background: url('../image/index-hot.png') top center no-repeat; */
+  background: url('.././image/index-hot.png') top center no-repeat;
     right: -33px;
     top: 9px;
 }
