完成购物车删除，单选/多选功能，未解决全选bug

--- a/lonarui/src/assets/css/public.less
+++ b/lonarui/src/assets/css/public.less
@@ -62,6 +62,15 @@ body {line-height: 1;}
 .flex-wrap{flex-wrap: wrap;-webkit-flex-wrap: wrap;-moz-flex-wrap: wrap;}
 .flex1 {flex:1;-webkit-flex: 1;-moz-flex:1;}
 .flexbetween { .flex; .flex-between;}
-/* 閫氱敤鍙橀噺 */
+/* 通用变量 */
+.ellipsis1 {overflow: hidden;text-overflow:ellipsis; white-space: nowrap;.d-in-block;}
+.trans4 { transition: all .4s;-webkit-transition: all .4s;-moz-transition: all .4s; }
+.scale05{transform:scale(1.05,1.05);}
+.translate4{
+transform: translate(0,-4px);
+-webkit-transform: translate(0,-4px);
+-ms-transform: translate(0,-4px);
+-moz-transform: translate(0,-4px);
+}
 @s:solid; @d:dashed;@url:'./img';
 .w100{width:100%;}
